# Teleclaude

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  VERSION  bot.py  bot_agent.py  bot_codex.py  bump  calendar_tools.py  claude_code.py  codex_code.py  contacts_tools.py  deploy.sh  docker-compose.yml  email_tools.py  github_tools.py  history.py  mcp_global.json  mcp_tools.py  monitor_system.py  persistence.py  pulse_agent.py  pyproject.toml  requirements.txt  setup_google.py  shared.py  station_codes.py  streaming.py  tasks_tools.py  tool_execution.py  train_tools.py  web_tools.py  webhooks.py
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
agent/: CLAUDE.md
docs/feature-requests/: train-times-api.md
scripts/: sync-agent-claude-md.sh
tests/: conftest.py  helpers.py  test_ask_user.py  test_bot_agent.py  test_bot_codex.py  test_bot_handlers.py  test_bot_helpers.py  test_calendar_tools.py  test_claude_code.py  test_codex_code.py  test_contacts_tools.py  test_email_tools.py  test_github_tools.py  test_mcp.py  test_md_render.py  test_message_queue.py  test_monitors.py  test_persistence.py  test_pulse.py  test_schedule.py  test_station_codes.py  test_streaming.py  test_tasks_tools.py  test_train_tools.py  test_voice.py  test_web_tools.py  test_webhooks.py
